fix socials in footer on mobile

--- a/scss/rules/_screen.scss
+++ b/scss/rules/_screen.scss
@@ -36,8 +36,8 @@
         }
 
         footer #socials a {
-            width: 1.8em;
-            padding: 0.2em;
+            font-size: 2em;
+            padding: 0.15em;
         }
 
         h1,
